--- a/templates/member/find_id.html
+++ b/templates/member/find_id.html
@@ -33,7 +33,7 @@
       </div>
       <div class="input-field">
         <label for="code">인증번호</label>
-        <div style="display: flex; gap: 10px">
+        <div class="input-inline">
           <input
             type="text"
             id="code"
@@ -41,11 +41,8 @@
             class="input-control"
             placeholder="인증번호 입력"
             required
-            style="flex: 1"
           />
-          <button type="button" id="send-code-btn" class="btn btn-outline" style="min-width: 150px">
-            인증번호 받기
-          </button>
+          <button type="button" id="send-code-btn" class="btn btn-outline">인증번호 받기</button>
         </div>
       </div>
       <button type="submit" class="btn btn-primary btn-block">아이디 찾기</button>
