--- a/templates/member/find_password.html
+++ b/templates/member/find_password.html
@@ -43,7 +43,7 @@
       </div>
       <div class="input-field">
         <label for="code">인증번호</label>
-        <div style="display: flex; gap: 10px">
+        <div class="input-inline">
           <input
             type="text"
             id="code"
@@ -51,11 +51,8 @@
             class="input-control"
             placeholder="인증번호"
             required
-            style="flex: 1"
           />
-          <button type="button" id="send-code-btn" class="btn btn-outline" style="min-width: 150px">
-            인증번호 받기
-          </button>
+          <button type="button" id="send-code-btn" class="btn btn-outline">인증번호 받기</button>
         </div>
       </div>
       <button type="submit" class="btn btn-primary btn-block">비밀번호 확인</button>
