--- a/templates/member/member_reg.html
+++ b/templates/member/member_reg.html
@@ -83,7 +83,7 @@
       </div>
       <div class="input-field">
         <label for="code">인증번호</label>
-        <div style="display: flex; gap: 10px">
+        <div class="input-inline">
           <input
             type="text"
             id="code"
@@ -91,11 +91,8 @@
             class="input-control"
             placeholder="인증번호 입력"
             required
-            style="flex: 1"
           />
-          <button type="button" class="btn btn-outline" id="signup-send-code" style="min-width: 150px">
-            인증번호 받기
-          </button>
+          <button type="button" class="btn btn-outline" id="signup-send-code">인증번호 받기</button>
         </div>
       </div>
       <button type="submit" class="btn btn-primary btn-block">가입하기</button>
